#
# automake template for scripts/ directory
#



bin_SCRIPTS = driverKML.sh driverMultiProcessor.sh \
        createVolcanoKML_POLYGONS_ANIMATION.py createVolcanoKML_POLYGONS_LASTFRAME.py \
        boundaries.py boundariesMultiProcessor.py combineFiles.py createLabel.py \
        parseXML.py utmToLatLng.py blankheight.png FreeSerif.ttf h5dump.py

#python_PYTHON = titan_gui.py
