#
# automake template for scripts/ directory
#



bin_SCRIPTS = driverKML.sh driverMultiProcessor.sh

pyfilesdir=$(pythondir)
pyfiles_PYTHON = \
        createVolcanoKML_POLYGONS_ANIMATION.py createVolcanoKML_POLYGONS_LASTFRAME.py \
        boundaries.py boundariesMultiProcessor.py combineFiles.py createLabel.py \
        gnuplot.py h5dump.py lava.py lava_points.py \
        parseXML.py utmToLatLng.py

imagesdir=$(pythondir)
images_DATA=FreeSerif.ttf blankheight.png
