#
# automake template for scripts/ directory
#
# $Id: Makefile.am 2 2003-08-13 19:26:11Z sorokine $
#

bin_SCRIPTS = titan_pilehelper titan_regionhelper r.gmfg.titan s.in.titan \
	titan_gui.py titan_reset.sh

EXTRA_DIST = titan_pilehelper titan_regionhelper r.gmfg.titan s.in.titan \
	titan_gui.py titan_reset.sh

#python_PYTHON = titan_gui.py


