#
# automake template for src/geoflow directory
#
# $Id: Makefile.am 218 2009-10-22 14:38:24Z dkumar $
#

noinst_LIBRARIES = libgeoflow.a

libgeoflow_a_SOURCES = correct.f drag_model.f element_weight.C predict.f sgn.f \
   edge_states.C get_coef_and_eigen.C rnr.h slopes.C eigen.f getcoef.f \
   move_data.C setup_geoflow.C step.C stats.C flux_srcs.C corrector.C






