#
# automake template for src/geoflow directory
#
# $Id: Makefile.am 218 2009-10-22 14:38:24Z dkumar $
#

noinst_LIBRARIES = libgeoflow.a
#predict.f eigen.f getcoef.f correct.f drag_model.f sgn.f 
libgeoflow_a_SOURCES = element_weight.C \
   edge_states.C get_coef_and_eigen.C rnr.h slopes.C  \
   move_data.C setup_geoflow.C integrators.C stats.C flux_srcs.C






