#
# automake template for src/header directory
#
# $Id: Makefile.am 233 2012-03-27 18:30:40Z dkumar $
#

noinst_HEADERS = blas.h constant.h extfun.h geoflow.h hpfem.h properties.h \
    refined_neighbor_info.h struct.h boundary.h element2.h exvar.h \
    hashtab.h node.h recv.h scale.h flux_srcs.h

if BUILD_HDF5
    noinst_HEADERS += hd5calls.h
endif
