#
# automake template for src/header directory
#
# $Id: Makefile.am 129 2007-06-07 19:54:28Z dkumar $
#

noinst_HEADERS = blas.h constant.h extfun.h geoflow.h hpfem.h properties.h \
    refined_neighbor_info.h struct.h boundary.h element2.h exvar.h \
    hashtab.h node.h recv.h scale.h flux_srcs.h GMFG_hdfapi.h
